...
            onClick = onSignUpClick,
            modifier =
                Modifier
                    .padding(vertical = 16.dp)
                    .fillMaxWidth()
                    .height(60.dp)
                    .testTag("createAccountButton"),
        ) {
            Text(
                style = MaterialTheme.typography.titleLarge,
                color = MaterialTheme.colorScheme.onPrimary,
                text = stringResource(R.string.text_registration),
            )
...
